Added Gender-based model for prediction

--- a/titanic/Kaggle-Titanic.ipynb
+++ b/titanic/Kaggle-Titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -129,12 +129,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Open CSV file for test data\n",
+    "test_data = open('data/test.csv', 'rb')\n",
+    "test_data_csv = csv.reader(test_data)\n",
+    "header = test_data_csv.next()\n",
+    "\n",
+    "# Prepare file for predition based on gender ONLY\n",
+    "prediction_file = open(\"gender_based_model.csv\", \"wb\")\n",
+    "prediction_file_csv = csv.writer(prediction_file)\n",
+    "prediction_file_csv.writerow([\"PassengerId\", \"Survived\"]) # write the column headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Read test file and make predictions based in the gender\n",
+    "for row in test_data_csv:\n",
+    "    if row[3] == 'female':\n",
+    "        prediction_file_csv.writerow([row[0],'1']) # Predict survival\n",
+    "    else:\n",
+    "        prediction_file_csv.writerow([row[0],'0']) # Predict NO survival\n",
+    "\n",
+    "test_data.close()\n",
+    "prediction_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Now, make predictions taken into account more variables, such as:\n",
+    "# pclass (Passenger Class): [1,2,3]\n",
+    "# sex: [female,male]\n",
+    "# fare (Ticket price): <float value>\n",
+    "\n",
+    "# For the 'fare' value, we would create different buckets: \n",
+    "# For example: [0,10) [10,19) [20,29), [30,39+)\n",
+    "fare_bucket_step = 10\n",
+    "fare_bucket_ceiling = 40\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
