--- a/titanic/Kaggle-Titanic_v2.ipynb
+++ b/titanic/Kaggle-Titanic_v2.ipynb
@@ -790,7 +790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature engineering"
+    "# Start the party"
    ]
   },
   {
